// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`deve aceitar Flow props 1`] = `
.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-0 {
  margin-top: 1rem;
  margin-right: 0.5rem;
  margin-bottom: 1rem;
  margin-left: 0.5rem;
  display: inline-block;
}

.emotion-0:first-child {
  margin-top: 0;
}

.emotion-0:last-child {
  margin-bottom: 0;
}

<div
  class="emotion-3"
>
  <div
    class="emotion-0"
  >
    <span>
      1
    </span>
  </div>
  <div
    class="emotion-0"
  >
    <span>
      2
    </span>
  </div>
  <div
    class="emotion-0"
  >
    <span>
      3
    </span>
  </div>
</div>
`;

exports[`deve renderizar corretamente 1`] = `
.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-0 {
  margin-top: 0.5rem;
  margin-right: 0rem;
  margin-bottom: 0.5rem;
  margin-left: 0rem;
  display: inline-block;
}

.emotion-0:first-child {
  margin-top: 0;
}

.emotion-0:last-child {
  margin-bottom: 0;
}

<div
  class="emotion-3"
>
  <div
    class="emotion-0"
  >
    <span>
      1
    </span>
  </div>
  <div
    class="emotion-0"
  >
    <span>
      2
    </span>
  </div>
  <div
    class="emotion-0"
  >
    <span>
      3
    </span>
  </div>
</div>
`;
